# wasmedge-mysql-binlog-kafka

./: .gitignore  Dockerfile  README.md  docker-compose.wasmedge-container.yml  docker-compose.yml
.github/workflows/: rust.yml
mysql-binlog-kafka/: Cargo.toml  run.sh
mysql-binlog-kafka/src/: main.rs
mysql-binlog-kafka/src/sql-commands-test-rust/: insert_tables.rs
mysql_cdc/src/: connect.rs
